docs/book/samples/appa/type_order_check.out
error[formatting]: canonical order places type declarations before functions; move `thing` up
  --> type_order_check.kso:4:6
   4 | type thing
            ^
error[formatting]: function declarations appear in alphabetical order: `play` before `use_it`
  --> type_order_check.kso:7:5
   7 | pub play = print "x"
           ^
