docs/book/samples/appa/type_order_check.kso
fn use_it t
  t

type thing
  size:int

pub play = print "x"
